--- a/style.css
+++ b/style.css
@@ -4,42 +4,42 @@
     padding: 0;
 }
     
-.cabecalho{
-    background-color: rgb(230, 220, 25);
-    color:aqua;
+.Cabecalho{
+    background-color: rgb(14, 211, 208);
+    color:rgb(0, 0, 0);
     display:flex;
-    justify-content: space-around;
-    padding: 240px 0;
-    font-size: 50px;
+    justify-content: space-between;
+    padding: 1px 0;
+    font-size: 20px;
 }
 
-.cabecalhoLiataItem{ 
+.CabecalhoListaItem{ 
      display: inline-block;
-     margin: 0 120px;
-     padding: 78px 0;
+     margin: 10px 16px;
+     padding: 24px 0;
 }
 
 .sobreImagem{
-           width:50px;
+           width:30%;
 
 }
 
 .sobre{
-        background-image: linear-gradient(#36d7cc, #FFFFFF);
-        color:rgb(241, 134, 203) ;
+        background-image: linear-gradient(#36d7cc, #244483);
+        color:rgb(0, 0, 0) ;
         display:flex ;
         justify-content:center;
         align-items:center;
-        padding:370px 0; 
+        padding: 70px 100px ; 
 }
 
 .sobreConteudo{
-       width: 2px;
+       width: 450px;
 
 }
 
 .sobreTitulo{
-         padding: 100px 50px;
+         padding: 100px 30px;
 }
 
 
