--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
 }
 
 .sobre{
-        background-image: linear-gradient(#36d7cc, #244483);
+        background-image: linear-gradient(#fa80fa, #244483);
         color:rgb(0, 0, 0) ;
         display:flex ;
         justify-content:center;
